<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TableRecordActivity">

    <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/viewPager">

        <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/colorPrimary_2" android:id="@+id/tabLayout">

            <android.support.design.widget.TabItem
                    android:text="@string/game_on_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tabItem_time"/>

            <android.support.design.widget.TabItem
                    android:text="@string/game_on_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tabItem_speed"/>

            <android.support.design.widget.TabItem
                    android:text="@string/endless_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tabItem_endless"/>


        </android.support.design.widget.TabLayout>

    </android.support.v4.view.ViewPager>


</android.support.constraint.ConstraintLayout>