<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecordActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="408dp"
            android:layout_height="597dp"
            android:id="@+id/linearLayout2" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
        <TextView
                style="@style/tv_record"
                android:text="@string/record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_record"/>
        <TextView
                style="@style/tv_time"
                android:text="@string/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_top"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="385dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/ll_bad">
                <TextView
                        style="@style/tv_time"
                        android:text="@string/badplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_massage"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <Button
                            style="@style/button_number"
                            android:text="@string/main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/button_main"
                            android:layout_weight="1"/>
                    <Button
                            style="@style/button_number"
                            android:text="@string/tablerecord"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/button_record"
                            android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/ll_good">
                <TextView
                        style="@style/tv_time"
                        android:text="@string/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/tv_name"/>
                <EditText
                        style="@style/et_name"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/et_name"
                        android:inputType="textShortMessage"
                        android:contentDescription="Name"/>
                <Button
                        style="@style/button"
                        android:text="@string/save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/button_save"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>